--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -43,10 +43,18 @@ button.accept-policy {
   line-height: inherit;
 }
 
+html, body {
+  height: 100%;
+}
+
+main {
+  flex-grow: 1;
+}
+/* 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
-}
+} */
