--- a/Views/Servicos/Create.cshtml
+++ b/Views/Servicos/Create.cshtml
@@ -20,7 +20,7 @@
                     </div>
 
                     <div class="col-md-6">
-                        <label asp-for="PrecoBase" class="form-label fw-semibold">Documento do Cliente</label>
+                        <label asp-for="PrecoBase" class="form-label fw-semibold">Preço Base</label>
                         <input asp-for="PrecoBase" class="form-control"
                               value="@(Model.PrecoBase)" type="number" step="0.01" 
                               min="0" max="99999999.99" required>
