--- a/Views/Servicos/Edit.cshtml
+++ b/Views/Servicos/Edit.cshtml
@@ -23,10 +23,9 @@
                     </div>
 
                     <div class="col-md-6">
-                        <label asp-for="PrecoBase" class="form-label fw-semibold">Documento do Cliente</label>
-                        <input asp-for="PrecoBase" class="form-control"
-                              value="@(Model.PrecoBase)" type="number" step="0.01" 
-                              min="0" max="99999999.99" required>
+                        <label asp-for="PrecoBase" class="form-label fw-semibold">Preço Base</label>
+                        <input asp-for="PrecoBase" class="form-control" type="number" step="0.01" 
+                            min="0" max="99999999.99" required>
                         <span asp-validation-for="PrecoBase" class="text-danger"></span>
                     </div>
                 </div>
