--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                             <div class="right-align-item">
                                     <a asp-controller="Orcamentos" asp-action="Index" class="btn btn-primary">Orçamentos</a>
                                     <a asp-controller="Servicos" asp-action="Index" class="btn btn-primary">Serviços</a>
+                                    <a asp-controller="Clientes" asp-action="Index" class="btn btn-primary">Clientes</a>
                                     <a asp-controller="Login" asp-action="Logout" class="btn btn-danger">Sair</a>
                             </div>
                         }
