--- a/Views/Orcamentos/Index.cshtml
+++ b/Views/Orcamentos/Index.cshtml
@@ -177,13 +177,13 @@
                                 switch (status)
                                 {
                                     case 1:
-                                        texto = "Em aberto";
+                                        texto = "Aberto";
                                         break;
                                     case 2:
-                                        texto = "Concluído";
+                                        texto = "Em andamento";
                                         break;
                                     case 3:
-                                        texto = "Cancelado";
+                                        texto = "Concluído";
                                         break;
                                     default:
                                         texto = $"Desconhecido";
